Fix padding on smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -135,7 +135,7 @@ ol > li {
   }
 
   #main-doc {
-    padding: 30px 50px 0 50px;
+    padding: 30px 30px 0 30px;
   }
 
   .code-block {
@@ -161,7 +161,7 @@ ol > li {
   }
 
   #main-doc {
-    padding: 30px 50px 0 50px;
+    padding: 30px 25px 0 25px;
     text-align: left;
     min-width: 200px;
   }
